# polars_ta_extension

./: .gitignore  Cargo.toml  README.md
src/: cycle.rs  lib.rs  math.rs  momentum.rs  overlap.rs  pattern.rs  statistic.rs  transform.rs  volatility.rs  volume.rs
talib-sys/: build.rs
talib-sys/src/: bindings.rs
talib/examples/: ema.rs
talib/src/: lib.rs
