[package]
name = "polars_talib"
version = "0.1.3"
edition = "2021"


[dependencies]
polars = {version = "0.42", features = ["dtype-struct"]}
# "performant", "lazy", "dtype-array"
serde = { version = "*", features = ["derive"] }
talib-sys = { path = "talib-sys"}
talib = { path = "talib"}

[target.'cfg(any(not(target_os = "linux"), use_mimalloc))'.dependencies]
mimalloc = { version = "0.1", default-features = false }
 
[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
